IJPL-250645 [*]: migrating `PathEnvironmentVariableUtil` usages
GitOrigin-RevId: dd03c4295141ce5b2d539ee91c4152f9eff878d3